test/errors/macro1.input.asm
* = $801

!macro foo(a, b) {
    lda #a
    lda #b
}
    +foo(1)
